# easy-whisper-ui

./: .gitignore  .gitmodules  381_3_6_2025_1min_snippet.mp3.txt  CMakeLists.txt  README.md  build.iss  build.sh  download_models.bat  icon.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  resources.qrc  settings.cpp  settings.h  setup.iss  transcriptionpipeline.cpp  transcriptionpipeline.h  whisper_largev3.bat  whisper_tiny.bat  windowhelper.cpp
EasyWhisperUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.iss
electron/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
electron/buildResources/: EasyWhisperUI.desktop  icon.icns
electron/buildResources/scripts/: compile-whisper-linux.sh  compile-whisper.ps1  compile-whisper.sh  postinstall.js  reset-linux-test-deps.sh  run-dist.js
electron/src/main/: index.ts
electron/src/main/services/: binaryResolver.ts  compileManager.ts  liveManager.ts  transcriptionManager.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx  FirstLaunchLoader.tsx  index.html
electron/src/renderer/components/: LayoutColumn.tsx  PlaceholderPanel.tsx
electron/src/renderer/styles/: App.module.css  FirstLaunchLoader.module.css  LayoutColumn.module.css  PlaceholderPanel.module.css  global.css
electron/src/renderer/utils/: classNames.ts
electron/src/types/: easy-whisper.d.ts
legacy/: CMakeLists.txt
legacy/src/: filequeue.h  livetranscriber.cpp  windowhelper.h
resources/: icon.rc
src/: build.bat  filequeue.cpp  livetranscriber.cpp  livetranscriber.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h  setup.iss
